--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="xposed_scope">
+        <item>android</item>
         <item>app.lokey0905.location</item>
         <item>com.ubercab.driver</item>
         <item>com.logistics.rider.foodpanda</item>
