--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,5 +15,6 @@
         <item>com.nianticlabs.monsterhunter</item>
         <item>com.nianticlabs.pikmin</item>
         <item>com.theappninjas.fakegpsjoystick</item>
+        <item>com.walmart.sparkdriver</item>
     </string-array>
 </resources>
